# rustmus

./: .gitignore  Cargo.toml  README.dev.md  README.md
src/: app.rs  browser.rs  library.rs  list.rs  main.rs  persistence.rs  player.rs  ui.rs
src/player/: decoder.rs  mod.rs  output.rs
src/screens/: browser.rs  library.rs  mod.rs
