[package]
name = "rustmus"
version = "0.1.0"
edition = "2024"

[dependencies]
crossterm = "0.28.1"  # For handling terminal I/O
ratatui = { version = "0.29.0", features = ["crossterm"] }       # For building the TUI interface
tokio = { version = "1", features = ["full"] }  # For async support if needed
walkdir = "2.5"
id3 = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
symphonia = { version = "0.5.4", features = ["all"] }
cpal = "0.15"
anyhow = "1"
simplelog = "0.12.1"
log = "0.4"
